Alignment  corrected and small device option crected only header

--- a/Css/personal.css
+++ b/Css/personal.css
@@ -10,7 +10,7 @@
 }
 .nav-button{
     font-size: 1.1rem;
-    background-color: rgb(60, 180, 180);
+    background-color: rgb(64, 238, 212);
    
 }
 .nav-header-button{
